feat: Updated recommended songs list in genre_result_page.html based on user's provided data.

--- a/music_genre_app/templates/genre_result_page.html
+++ b/music_genre_app/templates/genre_result_page.html
@@ -191,54 +191,54 @@
         // app.py의 GENRE_DETAILS와 동일한 songs 정보만 JavaScript 객체로 정의
         const genreSongs = {
             "blues": [
-                { title: "The Thrill Is Gone", artist: "B.B. King", youtube: "https://www.youtube.com/watch?v=4fk2W7210xQ" },
-                { title: "Cross Road Blues", artist: "Robert Johnson", youtube: "https://www.youtube.com/watch?v=Yd60nI47D7A" },
-                { title: "Sweet Home Chicago", artist: "Robert Johnson", youtube: "https://www.youtube.com/watch?v=T_A_L_y2_2c" }
+                { title: "The Thrill Is Gone", artist: "B.B. King", youtube: "https://www.youtube.com/watch?v=oica5jG7FpU" },
+                { title: "Cross Road Blues", artist: "Robert Johnson", youtube: "https://www.youtube.com/watch?v=GsB_cGdgPTo" },
+                { title: "난 아직도 널", artist: "작품 하나", youtube: "https://www.youtube.com/watch?v=axdggnTlCEA" }
             ],
             "classical": [
-                { title: "Symphony No. 5", artist: "Ludwig van Beethoven", youtube: "https://www.youtube.com/watch?v=jvXywhJp-dY" },
-                { title: "Eine kleine Nachtmusik", artist: "Wolfgang Amadeus Mozart", youtube: "https://www.youtube.com/watch?v=o1FS8z_Fp0o" },
-                { title: "Moonlight Sonata", artist: "Ludwig van Beethoven", youtube: "https://www.youtube.com/watch?v=FM7Z_E-Q-28" }
+                { title: "Eine kleine Nachtmusik (A Little Night Music), K. 525", artist: "Mozart", youtube: "https://www.youtube.com/watch?v=oy2zDJPIgwc" },
+                { title: "Symphony No. 5 in C minor, Op. 67 “Fate”", artist: "Beethoven", youtube: "https://www.youtube.com/watch?v=UgQarIwXVEA&list=RDUgQarIwXVEA&start_radio=1" },
+                { title: "Swan Lake, Op. 20", artist: "Tchaikovsky", youtube: "https://www.youtube.com/watch?v=9cNQFB0TDfY" }
             ],
             "country": [
-                { title: "Take Me Home, Country Roads", artist: "John Denver", youtube: "https://www.youtube.com/watch?v=1vrADq-y348" },
-                { title: "Ring of Fire", artist: "Johnny Cash", youtube: "https://www.youtube.com/watch?v=It7DTK_hF6E" },
-                { title: "Jolene", artist: "Dolly Parton", youtube: "https://www.youtube.com/watch?v=fA4h2-y_V_k" }
+                { title: "Take Me Home, Country Roads", artist: "John Denver", youtube: "https://www.youtube.com/watch?v=1vrEljMfXYo" },
+                { title: "Old Town Road", artist: "Lil Nas X ft. Billy Ray Cyrus", youtube: "https://www.youtube.com/watch?v=w2Ov5jzm3j8" },
+                { title: "Friends in Low Places", artist: "Garth Brooks", youtube: "https://www.youtube.com/watch?v=mvCgSqPZ4EM" }
             ],
             "disco": [
-                { title: "Stayin' Alive", artist: "Bee Gees", youtube: "https://www.youtube.com/watch?v=fNFzfwLM72c" },
-                { title: "Dancing Queen", artist: "ABBA", youtube: "https://www.youtube.com/watch?v=xFrGuyw1V8s" },
-                { title: "Le Freak", artist: "Chic", youtube: "https://www.youtube.com/watch?v=h1qQ16gxmKs" }
+                { title: "Stayin’ Alive", artist: "Bee Gees", youtube: "https://www.youtube.com/watch?v=fNFzfwLM72c" },
+                { title: "I Will Survive", artist: "Gloria Gaynor", youtube: "https://www.youtube.com/watch?v=6dYWe1c3OyU&list=RD6dYWe1c3OyU&start_radio=1" },
+                { title: "Funkytown", artist: "Lipps Inc.", youtube: "https://youtu.be/Z6dqIYKIBSU?si=yIJLXybL_zkwD_WI" }
             ],
             "hiphop": [
-                { title: "Lose Yourself", artist: "Eminem", youtube: "https://www.youtube.com/watch?v=_Y_Vz_iK_6A" },
-                { title: "Nuthin' but a 'G' Thang", artist: "Dr. Dre ft. Snoop Dogg", youtube: "https://www.youtube.com/watch?v=fC_tPq6U14Q" },
-                { title: "Changes", artist: "2Pac", youtube: "https://www.youtube.com/watch?v=eXv_Xw-D-5I" }
+                { title: "Lose Yourself", artist: "Eminem", youtube: "https://www.youtube.com/watch?v=_Yhyp-_hX2s" },
+                { title: "가라사대", artist: "비와이", youtube: "https://youtu.be/ckZor7HRU1E?si=Y9ZQ6HKFqt63wmxh" },
+                { title: "Sicko Mode", artist: "Travis Scott ft. Drake", youtube: "https://www.youtube.com/watch?v=6ONRf7h3Mdk" }
             ],
             "jazz": [
-                { title: "Autumn Leaves", artist: "Cannonball Adderley", youtube: "https://www.youtube.com/watch?v=hZg1M42g32Q" },
-                { title: "Take Five", artist: "Dave Brubeck Quartet", youtube: "https://www.youtube.com/watch?v=PH_jI7T-QxM" },
-                { title: "So What", artist: "Miles Davis", youtube: "https://www.youtube.com/watch?v=zqNTaTz1B9c" }
+                { title: "sing sing sing", artist: "Benny Goodman", youtube: "https://www.youtube.com/watch?v=r2S1I_ien6A&list=RDr2S1I_ien6A&start_radio=1" },
+                { title: "La vie en rose", artist: "Louis Armstrong", youtube: "https://www.youtube.com/watch?v=9n-hyA2-FDg&list=RD9n-hyA2-FDg&start_radio=1" },
+                { title: "In the mood", artist: "Glenn Miller", youtube: "https://www.youtube.com/watch?v=_CI-0E_jses&list=RD_CI-0E_jses&start_radio=1" }
             ],
             "metal": [
-                { title: "Master of Puppets", artist: "Metallica", youtube: "https://www.youtube.com/watch?v=K6_zs_J8K4M" },
-                { title: "Iron Man", artist: "Black Sabbath", youtube: "https://www.youtube.com/watch?v=9LjbMVXjOP5" },
-                { title: "Hallowed Be Thy Name", artist: "Iron Maiden", youtube: "https://www.youtube.com/watch?v=J51LPlP-s9o" }
+                { title: "You Really Got Me", artist: "The Kinks", youtube: "https://youtu.be/fTTsY-oz6Go?si=HrEe11NX1EFxNI8y" },
+                { title: "Helter Skelter", artist: "The Beatles", youtube: "https://youtu.be/vWW2SzoAXMo?si=w41acoC2-Iyr3v9b" },
+                { title: "Run To The Hills", artist: "Iron Maiden", youtube: "https://youtu.be/86URGgqONvA?si=xizLKw78FcZ1nT45" }
             ],
             "pop": [
+                { title: "Shape of You", artist: "Ed Sheeran", youtube: "https://www.youtube.com/watch?v=JGwWNGJdvx8" },
                 { title: "Dynamite", artist: "BTS", youtube: "https://www.youtube.com/watch?v=gdZLi9oWNZg" },
-                { title: "Bad Guy", artist: "Billie Eilish", youtube: "https://www.youtube.com/watch?v=DyDfgMOUjCI" },
-                { title: "Shape of You", artist: "Ed Sheeran", youtube: "https://www.youtube.com/watch?v=JGwWNGJdvx8" }
+                { title: "Blinding Lights", artist: "The Weeknd", youtube: "https://www.youtube.com/watch?v=4NRXx6U8ABQ" }
             ],
             "reggae": [
-                { title: "No Woman, No Cry", artist: "Bob Marley & The Wailers", youtube: "https://www.youtube.com/watch?v=jGqA24k-J2Y" },
-                { title: "Three Little Birds", artist: "Bob Marley & The Wailers", youtube: "https://www.youtube.com/watch?v=LanCLS_hCpg" },
-                { title: "Red Red Wine", artist: "UB40", youtube: "https://www.youtube.com/watch?v=zXt53QT7_2U" }
+                { title: "Ob-La-Di, Ob-La-Da", artist: "The Beatles", youtube: "https://youtu.be/vYEY5Jmz3pU?si=Z0cS_sLzWJiXPKa_" },
+                { title: "Hold Me Tight", artist: "Johnny Nash", youtube: "https://youtu.be/x79a2qB5L-Q?si=4gvv2Jz9XqFdfFfj" },
+                { title: "칵테일 사랑", artist: "마로니에", youtube: "https://youtu.be/D-tP16V17QI?si=uHdGlLkeM3Dd0HHx" }
             ],
             "rock": [
-                { title: "Bohemian Rhapsody", artist: "Queen", youtube: "https://www.youtube.com/watch?v=fJ9rUzIMcZQ" },
-                { title: "Smells Like Teen Spirit", artist: "Nirvana", youtube: "https://www.youtube.com/watch?v=hTWKbfoikeg" },
-                { title: "Stairway to Heaven", artist: "Led Zeppelin", youtube: "https://www.youtube.com/watch?v=QkF3OWuY18A" }
+                { title: "Sk8er Boi", artist: "Avril Lavigne", youtube: "https://youtu.be/TIy3n2b7V9k?si=YnA-rO_BzMrQGVi2" },
+                { title: "The House of the Rising Sun", artist: "The Animals", youtube: "https://www.youtube.com/watch?v=4-43lLKaqBQ" },
+                { title: "스물다섯, 스물하나", artist: "자우림", youtube: "https://www.youtube.com/watch?v=7xobleMnKhU" }
             ],
             "기타": [] // '기타' 장르에 대한 추천곡은 없음
         };
